--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,28 @@
 {
-    "name": "lingxi/api-authentication",
-    "autoload": {
-        "psr-4": {
-            "Lingxi\\Api\\": "src/"
-        }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~4.0 || ~5.0"
+  "name": "feyman/ip-info",
+  "description": "By IP To Get The Corresponding Country, Province , City and ISP",
+  "license": "MIT",
+  "keywords": [
+    "ip-info",
+    "laravel",
+    "ip-address"
+  ],
+  "require": {
+    "php": ">=5.1",
+    "illuminate/support": "^5.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "IpInfo\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "IpInfo\\Test\\": "tests/"
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.7",
+    "fzaninotto/faker": "^1.6"
+  }
 }
