--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,19 @@
 language: php
+
 php:
- - '5.6'
+  - 5.6
+  - 7.0
 
-sudo: false
+before_script:
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
+  - ./vendor/bin/phplint
 
-before_script: travis_retry composer install --no-interaction --prefer-source
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover ./build/logs/clover.xml
 
-script: vendor/bin/phpunit --verbose
+script: ./vendor/bin/phpunit --coverage-text --coverage-clover ./build/logs/clover.xml
+
+matrix:
+  fast_finish: true
