--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,15 @@
 {
   "name": "feyman/ip-info",
-  "description": "By IP To Get The Corresponding Country, Province , City and ISP",
+  "description": "By IP To Get The Corresponding Country, Province, City, County and ISP",
   "license": "MIT",
   "keywords": [
     "ip-info",
-    "laravel",
-    "ip-address"
+    "ip-address",
+    "ip-location"
   ],
   "require": {
-    "php": ">=5.6"
+    "php": ">=5.6",
+    "illuminate/support": "^5.4"
   },
   "autoload": {
     "psr-4": {
